--- a/Part2/project4/Labwork4.ipynb
+++ b/Part2/project4/Labwork4.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -94,20 +94,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m\u001b[32mSuccess: no issues found in 1 source file\u001b[m\n",
-      "CoffeeShop name is \"La Viet\"\n",
-      "CoffeeShop is in \"Ha Noi\"\n",
-      "CoffeeShop zip code is 111000\n",
-      "CoffeeShop name is \"La Viet\"\n",
-      "CoffeeShop is in \"Neuville de Poitou\"\n",
-      "CoffeeShop zip code is 86170\n"
+      "exercise1.py:44: \u001b[1m\u001b[31merror:\u001b[m invalid syntax  \u001b[m\u001b[33m[syntax]\u001b[m\n",
+      "\u001b[1m\u001b[31mFound 1 error in 1 file (errors prevented further checking)\u001b[m\n",
+      "  File \"exercise1.py\", line 44\n",
+      "    @address.setter(self, address: Address)-> None:\n",
+      "                                 ^\n",
+      "SyntaxError: invalid syntax\n"
      ]
     }
    ],
@@ -128,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +237,7 @@
    ],
    "source": [
     "%%writefile labwork4/exercise3.py\n",
-    "from abc import abstractmethod\n",
+    "from abc import abstractmethod, ABC\n",
     "class CoffeeShop:\n",
     "    def __init__(self, name: str):\n",
     "        self.__name = name\n",
@@ -247,35 +246,45 @@
     "    def name(self):\n",
     "        return self.__name\n",
     "\n",
+    "    \n",
+    "\n",
+    "class DeliveryService(ABC):\n",
     "    @abstractmethod\n",
     "    def takeaway(self) -> str:\n",
     "        pass\n",
+    "\n",
     "    \n",
-    "class A(CoffeeShop):\n",
+    "class A(CoffeeShop, DeliveryService):\n",
     "    def takeaway(self) -> str:\n",
     "        return \"Delivery at most 30 minutes\"\n",
     "\n",
-    "\n",
     "class B(CoffeeShop):\n",
-    "    def takeaway(self) -> str:\n",
-    "        raise Exception('We do not have takeaway service')\n",
-    "\n",
-    "def call_takeaway(coffee_shop: CoffeeShop):\n",
-    "    return coffee_shop.takeaway()\n",
+    "    pass\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
+    "    # def display_dev(coffee_with_delivery: Union[CoffeeShop, DeliveryService])->None:\n",
+    "    #     print(f\"{coffee_with_delivery.name}: {coffee_with_delivery.takeaway()}\")\n",
+    "    \n",
+    "    # def display_without_dev(coffee_shop:CoffeeShop) -> None:\n",
+    "    #     print(f\"{coffee_shop.name}, no delivery\")\n",
+    "\n",
+    "    # def display(cs: CoffeeShop|Union[CoffeeShop, DeliveryService])->None:\n",
+    "    #     if isinstance(cs, DeliveryService):\n",
+    "    #         display_dev(cs)\n",
+    "    #     else:\n",
+    "    #         display_without_dev(cs)\n",
     "    a = A('A')\n",
     "    b = B('B')\n",
-    "    print(call_takeaway(a))\n",
-    "    print(call_takeaway(b))\n",
     "    print(f'CoffeeShop {a.name}: {a.takeaway()}')\n",
-    "    print(f'CoffeeShop {b.name}: {b.takeaway()}')\n"
+    "    print(f'CoffeeShop {b.name}, not service')\n",
+    "#neu 1 class co 1 method, ma class con k dung duoc, thi phai vut method day di va chuyen xuong class con(bat cu class con nao xai duoc)\n",
+    "#con khong thi vi pham liskov"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -283,15 +292,8 @@
      "output_type": "stream",
      "text": [
       "\u001b[1m\u001b[32mSuccess: no issues found in 1 source file\u001b[m\n",
-      "Delivery at most 30 minutes\n",
-      "Traceback (most recent call last):\n",
-      "  File \"exercise3.py\", line 31, in <module>\n",
-      "    print(call_takeaway(b))\n",
-      "  File \"exercise3.py\", line 24, in call_takeaway\n",
-      "    return coffee_shop.takeaway()\n",
-      "  File \"exercise3.py\", line 21, in takeaway\n",
-      "    raise Exception('We do not have takeaway service')\n",
-      "Exception: We do not have takeaway service\n"
+      "CoffeeShop A: Delivery at most 30 minutes\n",
+      "CoffeeShop B, not service\n"
      ]
     }
    ],
@@ -313,7 +315,15 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting labwork4/exercise4.py\n"
+     ]
+    }
+   ],
    "source": [
     "# %%writefile labwork4/exercise4.py\n",
     "# from abc import ABC, abstractmethod\n",
@@ -420,11 +430,6 @@
     "\n",
     "\n",
     "class ICoffeeShop(ABC):\n",
-    "    # traditional shops\n",
-    "    @abstractmethod\n",
-    "    def brew_machine_pour_over(self):\n",
-    "        pass\n",
-    "\n",
     "    # third wave shops\n",
     "    @abstractmethod\n",
     "    def brew_filter_coffee(self):\n",
@@ -436,11 +441,19 @@
     "    def brew_by_espresso_machine(self):\n",
     "        pass\n",
     "\n",
+    "    @abstractmethod\n",
+    "    def brew_machine_pour_over(self):\n",
+    "        pass\n",
+    "\n",
     "class IThirdWave(ICoffeeShop):\n",
     "    # third wave shops\n",
     "    @abstractmethod\n",
     "    def brew_by_hand_held_espresso_maker(self):\n",
     "        print(\"brewing by hand held expresso maker\")\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def brew_manual_pour_over(self):\n",
+    "        pass\n",
     "\n",
     "class Traditional(ITraditional):\n",
     "    def brew_by_espresso_machine(self):\n",
@@ -466,18 +479,21 @@
     "if __name__ == \"__main__\":\n",
     "    def print_all(coffee_shop: ICoffeeShop):\n",
     "        \"\"\"Try all the methods...\"\"\"\n",
-    "        def handle_exception(func):\n",
-    "            \"\"\"Print the exception if one is raised\"\"\"\n",
-    "            try:\n",
-    "                func()\n",
-    "            except NotImplementedError as exception:\n",
-    "                print(f'-> {exception}')\n",
     "\n",
-    "        handle_exception(coffee_shop.brew_by_espresso_machine)\n",
-    "        handle_exception(coffee_shop.brew_machine_pour_over)\n",
-    "        handle_exception(coffee_shop.brew_by_hand_held_espresso_maker)\n",
-    "        handle_exception(coffee_shop.brew_manual_pour_over)\n",
-    "        coffee_shop.brew_filter_coffee()\n",
+    "        def print_traditional(coffee_shop: ITraditional):\n",
+    "            coffee_shop.brew_by_espresso_machine()\n",
+    "            coffee_shop.brew_machine_pour_over()\n",
+    "            coffee_shop.brew_filter_coffee()\n",
+    "        \n",
+    "        def print_third_wave(coffee_shop: IThirdWave):\n",
+    "            coffee_shop.brew_by_hand_held_espresso_maker()\n",
+    "            coffee_shop.brew_manual_pour_over()\n",
+    "            coffee_shop.brew_filter_coffee()\n",
+    "        \n",
+    "        if isinstance(coffee_shop, ITraditional):\n",
+    "            print_traditional(coffee_shop)\n",
+    "        if isinstance(coffee_shop, IThirdWave):\n",
+    "            print_third_wave(coffee_shop)\n",
     "\n",
     "    print('For a Traditional Coffee Shop...')\n",
     "    print_all(Traditional())\n",
@@ -495,20 +511,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "exercise4.py:58: \u001b[1m\u001b[31merror:\u001b[m \u001b[m\u001b[1m\"ICoffeeShop\"\u001b[m has no attribute \u001b[m\u001b[1m\"brew_by_espresso_machine\"\u001b[m  \u001b[m\u001b[33m[attr-defined]\u001b[m\n",
-      "exercise4.py:60: \u001b[1m\u001b[31merror:\u001b[m \u001b[m\u001b[1m\"ICoffeeShop\"\u001b[m has no attribute \u001b[m\u001b[1m\"brew_by_hand_held_espresso_maker\"\u001b[m  \u001b[m\u001b[33m[attr-defined]\u001b[m\n",
-      "exercise4.py:61: \u001b[1m\u001b[31merror:\u001b[m \u001b[m\u001b[1m\"ICoffeeShop\"\u001b[m has no attribute \u001b[m\u001b[1m\"brew_manual_pour_over\"\u001b[m; maybe \u001b[m\u001b[1m\"brew_machine_pour_over\"\u001b[m?  \u001b[m\u001b[33m[attr-defined]\u001b[m\n",
-      "exercise4.py:68: \u001b[1m\u001b[31merror:\u001b[m Cannot instantiate abstract class \u001b[m\u001b[1m\"ThirdWave\"\u001b[m with abstract attribute \u001b[m\u001b[1m\"brew_machine_pour_over\"\u001b[m  \u001b[m\u001b[33m[abstract]\u001b[m\n",
-      "\u001b[1m\u001b[31mFound 4 errors in 1 file (checked 1 source file)\u001b[m\n",
+      "\u001b[1m\u001b[32mSuccess: no issues found in 1 source file\u001b[m\n",
       "For a Traditional Coffee Shop...\n",
       "brewing by expresso machine\n",
       "brewing maching pour over\n",
-      "Traceback (most recent call last):\n",
-      "  File \"exercise4.py\", line 65, in <module>\n",
-      "    print_all(Traditional())\n",
-      "  File \"exercise4.py\", line 60, in print_all\n",
-      "    handle_exception(coffee_shop.brew_by_hand_held_espresso_maker)\n",
-      "AttributeError: 'Traditional' object has no attribute 'brew_by_hand_held_espresso_maker'\n"
+      "brewing filter coffee\n",
+      "\n",
+      "For a ThirdWave Coffee Shop...\n",
+      "brewing by hand held expresso maker\n",
+      "brewing manual pour over\n",
+      "brewing filter coffee\n"
      ]
     }
    ],
@@ -535,7 +547,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing labwork4/exercise5.py\n"
+      "Overwriting labwork4/exercise5.py\n"
      ]
     }
    ],
@@ -581,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -594,82 +606,89 @@
    ],
    "source": [
     "%%writefile labwork4/exercise5.py\n",
+    "from __future__ import annotations\n",
     "from abc import ABC, abstractmethod\n",
     "class ICoffeeShop(ABC):\n",
-    "    def __init__(self, name: str):\n",
-    "        self.__name = name\n",
-    "\n",
     "    @property\n",
-    "    def name(self):\n",
-    "        return self.__name\n",
+    "    @abstractmethod\n",
+    "    def name(self: ICoffeeShop) -> str:\n",
+    "        ...\n",
     "\n",
     "    @abstractmethod\n",
-    "    def get_payment(self):\n",
-    "        pass\n",
+    "    def get_payment(self: ICoffeeShop)->None:\n",
+    "        ...\n",
     "\n",
     "    @abstractmethod\n",
-    "    def deliver_coffee(self):\n",
-    "        pass\n",
+    "    def deliver_coffee(self: ICoffeeShop)->None:\n",
+    "        ...\n",
     "\n",
     "    \n",
     "class CoffeeShop(ICoffeeShop):\n",
-    "    def get_payment(self):\n",
-    "        print(f\"{self._ICoffeeShop__name} gets the payment\")\n",
+    "    def __init__(self: CoffeeShop, name: str):\n",
+    "        self.__name = name\n",
     "\n",
-    "    def deliver_coffee(self):\n",
-    "        print(f\"{self._ICoffeeShop__name} delivers the coffee\")\n",
+    "    @property\n",
+    "    def name(self) -> str:\n",
+    "        return self.__name\n",
     "\n",
-    "class ICustomer(ABC):\n",
+    "    def get_payment(self: CoffeeShop):\n",
+    "        print(f\"{self.__name} gets the payment\")\n",
+    "\n",
+    "    def deliver_coffee(self: CoffeeShop):\n",
+    "        print(f\"{self.__name} delivers the coffee\")\n",
+    "\n",
+    "class ICustomer(ABC):  \n",
+    "    @property\n",
+    "    @abstractmethod\n",
+    "    def name(self: ICustomer) -> str:\n",
+    "        ...\n",
+    "\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def make_payment(self: ICustomer)->None:\n",
+    "        ...\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def receive_coffee(self: ICustomer)->None:\n",
+    "        ...\n",
+    "\n",
+    "\n",
+    "class Customer(ICustomer):\n",
     "    def __init__(self, name: str):\n",
     "        self.__name = name\n",
     "        \n",
     "    @property\n",
-    "    def name(self):\n",
+    "    def name(self) -> str:\n",
     "        return self.__name\n",
-    "        \n",
-    "    @abstractmethod\n",
-    "    def make_payment(self):\n",
-    "        pass\n",
-    "\n",
-    "    @abstractmethod\n",
-    "    def receive_coffee(self):\n",
-    "        pass\n",
-    "\n",
-    "\n",
-    "class Customer(ICustomer):\n",
     "\n",
     "    def make_payment(self):\n",
-    "        print(f\"{self._ICustomer__name} makes the payment\")\n",
+    "        print(f\"{self.__name} makes the payment\")\n",
     "\n",
     "    def receive_coffee(self):\n",
-    "        print(f\"{self._ICustomer__name} receives the coffee\")\n",
+    "        print(f\"{self.__name} receives the coffee\")\n",
     "\n",
     "class IDelivery(ABC):\n",
-    "    def __init__(self, customer: ICustomer, coffee_shop: ICoffeeShop):\n",
-    "        self.__customer = customer\n",
-    "        self.__coffee_shop = coffee_shop\n",
-    "\n",
     "    @abstractmethod\n",
-    "    def delivers(self):\n",
-    "        pass\n",
+    "    def delivers(self: IDelivery, coffee_shop: ICoffeeShop, customer: ICustomer)->None:\n",
+    "        ...\n",
     "\n",
     "\n",
     "class Delivery(IDelivery):\n",
     "\n",
-    "    def delivers(self):\n",
-    "        self._IDelivery__customer.make_payment()\n",
-    "        self._IDelivery__coffee_shop.get_payment()\n",
-    "        self._IDelivery__coffee_shop.deliver_coffee()\n",
-    "        self._IDelivery__customer.receive_coffee()\n",
+    "    def delivers(self, coffee_shop: ICoffeeShop, customer: ICustomer):\n",
+    "        customer.make_payment()\n",
+    "        coffee_shop.get_payment()\n",
+    "        coffee_shop.deliver_coffee()\n",
+    "        customer.receive_coffee()\n",
     "\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    Delivery(Customer('Uncle Bob'), CoffeeShop('La Viet')).delivers()\n"
+    "    Delivery().delivers(CoffeeShop('La Viet'), Customer('Uncle Bob'))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
