--- a/Part2/project4/Labwork4.ipynb
+++ b/Part2/project4/Labwork4.ipynb
@@ -145,10 +145,6 @@
     "    def __init__(self, name: str) -> None:\n",
     "        self.__name = name\n",
     "\n",
-    "    @property\n",
-    "    def name(self) -> str:\n",
-    "        return self.__name\n",
-    "\n",
     "    @abstractmethod\n",
     "    def get_invoice(self) -> str:\n",
     "        pass\n",
@@ -315,15 +311,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting labwork4/exercise4.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# %%writefile labwork4/exercise4.py\n",
     "# from abc import ABC, abstractmethod\n",
@@ -593,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +663,7 @@
     "\n",
     "class Delivery(IDelivery):\n",
     "\n",
-    "    def delivers(self, coffee_shop: ICoffeeShop, customer: ICustomer):\n",
+    "    def delivers(self: Delivery, coffee_shop: ICoffeeShop, customer: ICustomer):\n",
     "        customer.make_payment()\n",
     "        coffee_shop.get_payment()\n",
     "        coffee_shop.deliver_coffee()\n",
@@ -688,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +754,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.13 (default, Mar 28 2022, 11:38:47) \n[GCC 7.5.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
